# cpp-modules-rdkafka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: FindRdKafka.cmake
